<resources>
    <string name="app_name">HW1_Calc</string>
    <string name="_.">.</string>
    <string name="_DEL">DEL</string>
    <string name="_EQUAL">=</string>
    <string name="_ADD">+</string>
    <string name="_SUB">-</string>
    <string name="_MUL">*</string>
    <string name="_DIV">/</string>
    <string name="_COPY">COPY</string>
    <string name="_CLEAR">CLEAR</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="hello">HELLO</string>
</resources>